tests/baselines/reference/tsconfigMapOptionsAreCaseInsensitive.errors.txt
tsconfig.json(3,19): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "module": "AmD"
                      ~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        }
    }
    
==== other.ts (0 errors) ====
    export default 42;
    
==== index.ts (0 errors) ====
    import Answer from "./other.js";
    const x = 10 + Answer;
    export {
        x
    };